[metadata]
name = pdiary
version = 1.65
description = A simple terminal diary journal application written in Python with encryption support
long_description = file: README.md
author = Valter Nazianzeno
author_email = manipuladordedados@gmail.com
url = https://github.com/manipuladordedados/pdiary
keywords = diary pdiary journal terminal python
license = GNU GPLv3
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
packages =
    pdiary
    pdiary.lib
install_requires =
    peewee>=2.8.3
    sqlcipher3-binary>=0.4.0
    npyscreen @ https://github.com/jwoglom/npyscreen/archive/master.tar.gz

[options.entry_points]
console_scripts =
    pdiary = pdiary.main:main
